# verifiable-credential-zk-health-record

./: .gitignore  .gitmodules  README.md  package-lock.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/server/: api.rs  mod.rs
med-app/: index.html  package-lock.json  package.json  vite.config.ts
med-app/src/: Router.tsx  config.ts  main.tsx
med-app/src/biconomy/: biconomyCounter.tsx  biconomyLogin.tsx
med-app/src/components/: Footer.tsx  Header.tsx  Logo.tsx
med-app/src/pages/: HomePage.tsx  SignInPage.tsx
med_app/: .env.example  index.html  package-lock.json  package.json
med_app/src/: App.test.tsx  Router.tsx  config.ts  main.tsx
med_app/src/biconomy/: biconomyCounter.tsx
med_app/src/components/: Footer.tsx  Header.tsx  Logo.tsx
med_app/src/onyx/: config.ts  create-and-sign-vc.ts
med_app/src/pages/: HomePage.tsx  RegisterPage.tsx  SignInPage.tsx
med_app/src/utils/: constants.ts  displayToast.ts
registry/src/: SoulBoundMedicalRecord.sol  SoulBoundRecord.sol  SoulBoundRecord_old.sol  VCSoulBoundReceipt.sol
registry/src/flatten/: SoulBoundRecord_flatten_old.sol  VCSoulBoundReceipt_flatten.sol
server/: package-lock.json  package.json  tsconfig.json
server/src/: app.ts  config.ts  index.ts
zk_app/: .gitignore  Cargo.toml
zk_app/api/: Cargo.toml
zk_app/api/src/: main.rs
zk_app/api/src/resources/: image.rs  medication_request.rs  mod.rs  patient.rs  vc.rs
zk_app/core/: Cargo.toml
zk_app/host/: Cargo.toml
zk_app/methods/: Cargo.toml
zk_app/vc/: resource_patient_example.json  verifiable_cred.json
(+47 files in other folders)
