[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
uuid = { version = "1.4.1", features = ["serde", "fast-rng", "v4"] }
