[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-methods = { path = "../methods" }
json-core = { path = "../core" }
risc0-zkvm = { version = "0.18.0" }
actix-cors = "0.6.4"
actix-web = "4.4.0"
host = { path = "../host" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
